--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyect11",
+  "name": "webdossier",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yaireo/tagify": "^4.17.9",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.10.2",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.10.1",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "vite": "^4.4.5"
   }
 }
